<resources>
    <string name="app_name">Ohaus_app</string>
    <string name="login_btn_title">登录</string>
    <string name="drawer_open">抽屉菜单开</string>
    <string name="drawer_close">抽屉菜单关</string>
    <string name="menu_history_title">浏览历史</string>
    <string name="menu_download_title">我的下载</string>
    <string name="menu_favorite_title">我的收藏</string>
    <string name="menu_invite_title">邀请朋友</string>
    <string name="menu_setting_title">设置</string>
    <string name="main_page_title">首页</string>
    <string name="menu_me_title">个人信息</string>
    <string name="login_title">登录</string>
    <string name="me_province_title">省份</string>
    <string name="me_photo_title">头像</string>
    <string name="me_phone_title">电话</string>
    <string name="me_name_title">姓名</string>
    <string name="me_mail_title">邮箱</string>
    <string name="me_job_title">职位</string>
    <string name="me_company_title">公司</string>
    <string name="me_city_title">城市</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_cancel">取消</string>
    <string name="btn_select_all_title">全选</string>
    <string name="btn_delete_selected_title">删除</string>
    <string name="btn_reverse_select_title">反选</string>
    <string name="login_input_phone_title">手机号</string>
    <string name="login_input_pwd_title">登录密码</string>
    <string name="setting_info_clear_cache_title">清理缓存</string>
    <string name="setting_info_contract_us_title">联系我们</string>
    <string name="setting_info_feedback_title">意见反馈</string>
    <string name="setting_info_modify_pwd_title">修改密码</string>
    <string name="setting_info_notification_title">消息通知</string>
    <string name="setting_info_logout_title">退出登录</string>
    <string name="invite_info_name_title"><![CDATA[<font color=red>*</font>姓名]]></string>
    <string name="invite_info_phone_title"><![CDATA[<font color=red>*</font>手机号码]]></string>
    <string name="invite_province_title"><![CDATA[<font color=red>*</font>省份]]></string>
    <string name="invite_city_title"><![CDATA[<font color=red>*</font>城市]]></string>
    <string name="invite_company_title"><![CDATA[<font color=red>*</font>公司名称]]></string>
    <string name="invite_job_title">职位</string>
    <string name="invite_mail_title">邮箱</string>
    <string name="production_category_str">产品分类</string>
    <string name="industry_application_str">行业应用</string>
    <string name="production_knowledge_str">产品百科</string>
    <string name="solve_plan_str">解决方案</string>
    <string name="activity_main_quick_news_str">奥豪斯快讯</string>
    <string name="activity_main_goods_recommend_str">精品推荐</string>
    <string name="production_category_price_str">价格</string>
    <string name="production_category_filter_str">筛选</string>
    <string name="new_user_str">新用户</string>
    <string name="forget_pwd_str">忘记密码?</string>
    <string name="production_detail_layout_left_title_str">商品介绍</string>
    <string name="production_detail_layout_right_title_str">规格参数</string>
    <string name="production_category_item_lower_price">"最低 ￥%d"</string>
</resources>
