<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start|center"
                android:text="@string/login_input_phone_title"/>

            <EditText
                android:id="@+id/login_input_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/login_input_pwd_title"/>

            <EditText
                android:id="@+id/login_input_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:enabled="true"
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:text="@string/login_btn_title"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:id="@+id/newuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_str"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/forget_pwd_str"/>
    </RelativeLayout>
</LinearLayout>
